--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -33,7 +33,8 @@ $font-sizes: (
     lg: 1.0769,
   //14px
     xl: 1.2308,
-  //16px,,,,,,,,,,,,,,
+  //16px,,,,,,,,,,,,,,,
+    xxl: 2,
 );
 $flex-jc: (
   start: flex-start,
