--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -63,6 +63,12 @@ p {
 .d-flex {
   display: flex;
 }
+.d-table {
+  display: table;
+}
+.d-table-cell {
+  display: table-cell;
+}
 .flex-column {
   flex-direction: column;
 }
