--- a/admin/src/styles/index.scss
+++ b/admin/src/styles/index.scss
@@ -64,3 +64,11 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+.title {
+  margin-left: 2.3rem;
+}
+
+.tableItem {
+  padding-top: 0.8rem;
+}
