--- a/admin/src/styles/index.css
+++ b/admin/src/styles/index.css
@@ -344,3 +344,11 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+.title {
+  margin-left: 2.3rem;
+}
+
+.tableItem {
+  padding-top: 0.8rem;
+}
