--- a/admin/src/styles/element-ui.css
+++ b/admin/src/styles/element-ui.css
@@ -1,21 +1,16 @@
-// cover some element-ui styles
-
 .el-breadcrumb__inner,
 .el-breadcrumb__inner a {
   font-weight: 400 !important;
 }
 
-.el-upload {
-  input[type="file"] {
-    display: none !important;
-  }
+.el-upload input[type="file"] {
+  display: none !important;
 }
 
 .el-upload__input {
   display: none;
 }
 
-// to fixed https://github.com/ElemeFE/element/issues/2461
 .el-dialog {
   transform: none;
   left: 0;
@@ -23,26 +18,19 @@
   margin: 0 auto;
 }
 
-// refine element ui upload
-.upload-container {
-  .el-upload {
-    width: 100%;
-
-    .el-upload-dragger {
-      width: 100%;
-      height: 200px;
-    }
-  }
+.upload-container .el-upload {
+  width: 100%;
 }
 
-// dropdown
-.el-dropdown-menu {
-  a {
-    display: block;
-  }
+.upload-container .el-upload .el-upload-dragger {
+  width: 100%;
+  height: 200px;
 }
 
-// to fix el-date-picker css style
+.el-dropdown-menu a {
+  display: block;
+}
+
 .el-range-separator {
   box-sizing: content-box;
 }
@@ -51,14 +39,17 @@
   margin-top: 23px;
   text-align: center;
 }
+
 .el-table {
   margin-top: 15px;
 }
+
 .el-card {
   position: relative;
   margin-top: 15px;
   padding: 5px;
 }
+
 .el-table tr td,
 .el-table tr th {
   text-align: center !important;
@@ -71,9 +62,11 @@
   position: relative;
   overflow: hidden;
 }
+
 .avatar-uploader .el-upload:hover {
   border-color: #409eff;
 }
+
 .avatar-uploader-icon {
   font-size: 28px;
   color: #8c939d;
