--- a/admin/src/styles/element-ui.scss
+++ b/admin/src/styles/element-ui.scss
@@ -82,3 +82,36 @@
   line-height: 178px !important;
   text-align: center;
 }
+.avatar {
+  width: 100%;
+  display: block;
+}
+
+.heroEditConatiner {
+  .el-input__inner {
+    width: 300px;
+  }
+  .el-button--primary {
+    margin-bottom: 1rem;
+  }
+  .bannerContainer {
+    width: 300px;
+    line-height: 0px !important;
+    .banner {
+      max-width: 100%;
+    }
+  }
+  .videoContainer {
+    line-height: 0px !important;
+    width: 500px;
+    .video {
+      width: 100%;
+    }
+  }
+}
+
+.tableAvatar {
+  height: 3rem !important;
+  border-radius: 6px;
+  border: 1px solid #000;
+}
