--- a/admin/src/styles/element-ui.scss
+++ b/admin/src/styles/element-ui.scss
@@ -82,6 +82,7 @@
   line-height: 178px !important;
   text-align: center;
 }
+
 .avatar {
   width: 100%;
   display: block;
@@ -109,9 +110,48 @@
     }
   }
 }
-
 .tableAvatar {
   height: 3rem !important;
   border-radius: 6px;
   border: 1px solid #000;
+}
+.createAdContainer {
+  .el-input__inner {
+    width: 250px;
+  }
+}
+.categoryContainer {
+  .createCatsName {
+    .el-input__inner {
+      width: 217px;
+    }
+  }
+  .categoryBtn {
+    display: flex;
+    justify-content: end;
+  }
+}
+
+.createArtilceTitle {
+  .el-input__inner {
+    width: 500px;
+  }
+}
+
+.login-card {
+  width: 25rem;
+  margin: 5rem auto;
+  .goLoginContainer {
+    color: #999;
+    display: flex;
+    justify-content: center;
+    .goLogin {
+      color: #409eff;
+    }
+  }
+}
+.userConatiner {
+  .el-input__inner {
+    width: 250px;
+  }
 }
